feat: add worker simulator and metrics computation
- Implemented the worker simulator in `src/worker/simulator.worker.ts` to handle task scheduling and execution.
- Added metrics computation in `src/engine/metrics.ts` to track CPU and RAM usage.
- Introduced task cost calculation based on defined policies in `src/engine/cost.ts`.
- Created a scheduling mechanism in `src/engine/scheduler.ts` to manage task execution based on resource pressure.
- Added TypeScript definitions for the worker in `dist/worker.d.ts`.
- Generated source maps for better debugging in `dist/worker.js.map`.
- Configured build settings in `tsup.config.ts` for entry points and output formats.

--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "synai-simulator",
-  "version": "1.0.0",
-  "main": "index.js",
+  "version": "0.1.0",
+  "type": "module",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": ["dist"],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsup",
+    "dev": "tsup --watch"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "devDependencies": {
-    "@types/node": "^25.0.6",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "tsup": "^8.0.0",
+    "typescript": "^5.0.0"
   }
 }
